css footer z-index fix

--- a/themes/nudev/src/__PRECOMP/sass/partials/footer.scss
+++ b/themes/nudev/src/__PRECOMP/sass/partials/footer.scss
@@ -40,7 +40,7 @@ footer{
     z-index: 0;
     height: 250px;
     background-size: 210px;
-    z-index:1000;
+    z-index:500;
     & > div.nu__footer{
       & > div.nu__footer-hideshow{
         border-bottom: solid rgba($brand_colors-grayW,1.0) 1px;
